cambio en ciclo do-while de scriptjs y agregado de extras css

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -52,6 +52,7 @@ ul {
         font-size: large;
         padding: 10px;
         color: white;
+        cursor: pointer;
     }:hover{
         border: 4px solid white;
     }
@@ -60,6 +61,30 @@ ul {
 .botones {
     text-align: center;
     margin-top: 20px;
+}
+
+.boton__billetera,
+.boton__comprar {
+    background-color: #2590b1; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 8px;
+    transition: background-color 0.3s; 
+
+    &:hover {
+        background-color: #45a049; 
+    }
+
+    &:focus {
+        outline: none; 
+    }
 }
 
 .carro {
