--- a/assets/styles.css
+++ b/assets/styles.css
@@ -56,6 +56,7 @@ ul li {
   font-size: large;
   padding: 10px;
   color: white;
+  cursor: pointer;
 }
 ul :hover {
   border: 4px solid white;
@@ -64,6 +65,30 @@ ul :hover {
 .botones {
   text-align: center;
   margin-top: 20px;
+}
+
+.boton__billetera,
+.boton__comprar {
+  background-color: #2590b1;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 8px;
+  transition: background-color 0.3s;
+}
+.boton__billetera:hover,
+.boton__comprar:hover {
+  background-color: #45a049;
+}
+.boton__billetera:focus,
+.boton__comprar:focus {
+  outline: none;
 }
 
 .carro {
