partials de estilos, agregado de drakmode js, modif htmls

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -1,96 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
+@import "./partials/variables";
+@import "./partials/index";
+@import "./partials/global";
+@import "./partials/darkModeBtn";
+@import "./partials/footer";
+@import "./partials/navbar";
 
-body {
-    width: 50%;
-    margin: auto;
-    font-family: 'Nunito', sans-serif;
-    background-image: url(../img/fondo.jpg);
-    @media screen and (max-width: 768px) {
-        width: 80%;        
-    }
-}
-
-h1 {
-    color: white;
-    text-align: center;
-    text-decoration: underline;
-}
-
-h2 {
-    color: white;
-    text-align: center;
-}
-
-h3 {
-    color: white;
-    text-align: center;
-}
-
-div {
-    display: inline-block;
-    margin-top: 15px;
-    margin-bottom: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
-    img{
-        border-radius: 25%;
-        height: 200px;
-        width: 200px;
-        @media screen and (max-width: 768px) {
-            height: 150px;
-            width: 150px;            
-        }
-    };
-}
-
-ul {
-    list-style: none;
-    text-align: center;
-    position: relative;
-    padding: 10px;
-    li{
-        background-color: rgba(21, 21, 56, 0.432);
-        font-size: large;
-        padding: 10px;
-        color: white;
-        cursor: pointer;
-    }:hover{
-        border: 4px solid white;
-    }
-}
-
-.botones {
-    text-align: center;
-    margin-top: 20px;
-}
-
-.boton__billetera,
-.boton__comprar {
-    background-color: #2590b1; 
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 8px;
-    transition: background-color 0.3s; 
-
-    &:hover {
-        background-color: #45a049; 
-    }
-
-    &:focus {
-        outline: none; 
-    }
-}
-
-.carro {
-    background-color: rgba(21, 21, 56, 0.432);
-    height: 100%;
-    width: 100%;
-    border: 2px solid white;    
-}
