--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,100 +1,395 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
-body {
-  width: 50%;
-  margin: auto;
-  font-family: "Nunito", sans-serif;
-  background-image: url(../img/fondo.jpg);
-}
-@media screen and (max-width: 768px) {
-  body {
-    width: 80%;
-  }
-}
-
-h1 {
-  color: white;
-  text-align: center;
-  text-decoration: underline;
-}
-
-h2 {
-  color: white;
+.tituloGeneral {
+  margin: 0 auto;
   text-align: center;
 }
+.tituloGeneral h1 {
+  color: black;
+  margin: 15px;
+}
+body.dark .tituloGeneral h1 {
+  color: rgb(224, 224, 224);
+}
 
-h3 {
-  color: white;
+.productos {
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: nowrap;
+}
+.productos .imagenProductos {
+  padding: 15px;
+}
+.productos .imagenProductos img {
+  width: 100%;
+}
+.productos .textoProductos {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 30px;
+  justify-content: center;
   text-align: center;
 }
-
-div {
-  display: inline-block;
-  margin-top: 15px;
-  margin-bottom: 20px;
-  margin-left: 10px;
-  margin-right: 10px;
+body.dark .productos .textoProductos {
+  color: rgb(224, 224, 224);
 }
-div img {
-  border-radius: 25%;
-  height: 200px;
-  width: 200px;
-}
-@media screen and (max-width: 768px) {
-  div img {
-    height: 150px;
-    width: 150px;
-  }
+.productos .textoProductos .textoProductosParrafo {
+  display: flex;
+  flex-direction: row;
+  text-align: justify;
 }
 
-ul {
-  list-style: none;
-  text-align: center;
-  position: relative;
-  padding: 10px;
+.producto-imagen {
+  max-width: 100%;
+  border-radius: 1rem;
 }
-ul li {
-  background-color: rgba(21, 21, 56, 0.432);
-  font-size: large;
-  padding: 10px;
-  color: white;
+
+.btnCompra {
+  background-color: rgb(28, 58, 156);
+  color: rgb(224, 224, 224);
+  border: none;
+  font-size: 20px;
+  padding: 0.5em 1em;
+  border-radius: 8px;
   cursor: pointer;
 }
-ul :hover {
-  border: 4px solid white;
+.btnCompra:hover {
+  filter: brightness(150%);
 }
 
-.botones {
-  text-align: center;
+.numerito {
+  background-color: rgb(219, 160, 32);
+  color: rgb(28, 58, 156);
+  padding: 0.15rem 0.25rem;
+  border-radius: 0.25rem;
+}
+
+.boton-carrito {
+  margin-top: 2rem;
+}
+
+.carrito-vacio,
+.carrito-comprado {
+  color: rgb(28, 58, 156);
+}
+
+.carrito-productos {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.carrito-producto {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(28, 58, 156);
+  color: antiquewhite;
+  padding: 0.5rem;
+  padding-right: 1.5rem;
+  border-radius: 1rem;
+}
+
+.carrito-producto-imagen {
+  width: 4rem;
+  border-radius: 1rem;
+}
+
+.carrito-producto small {
+  font-size: 0.75rem;
+}
+
+.carrito-producto-eliminar {
+  border: 0;
+  background-color: transparent;
+  color: #961818;
+  cursor: pointer;
+}
+
+.carrito-acciones {
+  display: flex;
+  justify-content: space-between;
   margin-top: 20px;
 }
 
-.boton__billetera,
-.boton__comprar {
-  background-color: #2590b1;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
+.carrito-acciones-vaciar {
+  border: 0;
+  background-color: rgb(28, 58, 156);
+  padding: 1rem;
+  border-radius: 1rem;
+  color: antiquewhite;
+  text-transform: uppercase;
   cursor: pointer;
-  border-radius: 8px;
-  transition: background-color 0.3s;
-}
-.boton__billetera:hover,
-.boton__comprar:hover {
-  background-color: #45a049;
-}
-.boton__billetera:focus,
-.boton__comprar:focus {
-  outline: none;
 }
 
-.carro {
-  background-color: rgba(21, 21, 56, 0.432);
-  height: 100%;
+.carrito-acciones-derecha {
+  display: flex;
+}
+
+.carrito-acciones-total {
+  display: flex;
+  background-color: rgb(28, 58, 156);
+  padding: 1rem;
+  color: antiquewhite;
+  text-transform: uppercase;
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  gap: 1rem;
+}
+
+.carrito-acciones-comprar {
+  border: 0;
+  background-color: rgb(71, 101, 199);
+  padding: 1rem;
+  color: rgb(230, 230, 230);
+  text-transform: uppercase;
+  cursor: pointer;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+
+.close-menu {
+  display: none;
+}
+
+.disabled {
+  display: none;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  font-size: 100%;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+section[id] {
+  scroll-padding-top: 70px;
+}
+
+body {
+  font-family: "Ubuntu", sans-serif;
+  background-color: antiquewhite;
+  text-decoration-color: black;
+  padding-top: 70px;
+  transition: 0.8s ease all;
+}
+body.dark {
+  background-color: #1a1a1a;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.horizontal-padding {
+  margin: 0 auto;
+  padding-left: 25px;
+  padding-right: 25px;
+  max-width: 980px;
+}
+
+.vertical-padding {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+.switch {
+  background: #808080;
+  border-radius: 1000px;
+  border: none;
+  position: relative;
+  cursor: pointer;
+  display: flex;
+  outline: none;
+  height: 30px;
+}
+.switch::after {
+  content: "";
+  display: block;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  background: #bebebe;
+  top: 0;
+  left: 0;
+  right: unset;
+  border-radius: 100px;
+  transition: 0.3s ease all;
+  box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.2);
+}
+.switch.active {
+  background: rgb(219, 160, 32);
+  color: #000;
+}
+.switch.active::after {
+  right: 0;
+  left: unset;
+}
+.switch span {
+  width: 30px;
+  height: 30px;
+  line-height: 31px;
+  display: block;
+  background: none;
+  color: #fff;
+}
+
+.footerContainer {
   width: 100%;
-  border: 2px solid white;
+  box-shadow: 0 -4px 5px rgb(202, 202, 202);
+  background-color: antiquewhite;
+  margin-top: 15px;
+  transition: 0.8s ease all;
+}
+body.dark .footerContainer {
+  background-color: #303030;
+}
+.footerContainer .grupo1 {
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 50px;
+  padding: 45px 0px;
+  text-align: center;
+  align-items: center;
+}
+.footerContainer .grupo1 .cajaFooter figure {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+.footerContainer .grupo1 .cajaFooter figure img {
+  width: 60px;
+}
+.footerContainer .grupo1 .cajaFooter h5 {
+  color: black;
+  margin-bottom: 25px;
+  font-size: 20px;
+  align-items: center;
+}
+body.dark .footerContainer .grupo1 .cajaFooter h5 {
+  color: rgb(224, 224, 224);
+}
+.footerContainer .grupo1 .cajaFooter .parrafoFooter {
+  color: black;
+  margin-bottom: 10px;
+}
+body.dark .footerContainer .grupo1 .cajaFooter .parrafoFooter {
+  color: rgb(224, 224, 224);
+}
+.footerContainer .grupo1 .cajaFooter .redes a {
+  display: inline-block;
+  text-decoration: none;
+  width: 45px;
+  height: 45px;
+  line-height: 45px;
+  color: rgb(0, 0, 0);
+  margin-right: 10px;
+  background-color: rgb(219, 160, 32);
+  text-align: center;
+  transition: all 300ms ease;
+}
+.footerContainer .grupo1 .cajaFooter .redes a:hover {
+  color: antiquewhite;
+}
+.footerContainer .grupo2 {
+  background-color: black;
+  padding: 15px 10px;
+  text-align: center;
+  color: antiquewhite;
+}
+
+.topheader {
+  box-shadow: 0 4px 5px rgb(202, 202, 202);
+  position: fixed;
+  background-color: antiquewhite;
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+  transition: 0.8s ease all;
+}
+body.dark .topheader {
+  background-color: #303030;
+}
+
+.topnav {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  max-width: 980px;
+  margin: 0 auto;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  font-weight: 18px;
+  font-weight: 500;
+  color: rgb(28, 58, 156);
+}
+body.dark .logo {
+  color: rgb(71, 101, 199);
+}
+.logo img, .logo div {
+  padding: 0 10px;
+  width: 90px;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.menu li {
+  padding: 0 15px;
+}
+.menu li a {
+  position: relative;
+  color: black;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 50px;
+  text-transform: uppercase;
+}
+body.dark .menu li a {
+  color: rgb(224, 224, 224);
+}
+.menu lihover {
+  color: rgb(28, 58, 156);
+}
+
+.open-menu, .close-menu, .close-menu-social {
+  display: none;
+}
+
+.menu a::after {
+  content: "";
+  background-color: rgb(219, 160, 32);
+  position: absolute;
+  left: 0;
+  top: calc(100% + 4px);
+  width: 100%;
+  height: 4px;
+  opacity: 0;
+}
+
+.menu a.selected::after,
+.menu a:hover::after {
+  opacity: 0.8;
+  transition: opacity 0.3s;
+}
+
+.menu a:hover {
+  color: rgb(28, 58, 156);
 }/*# sourceMappingURL=styles.css.map */
