--- a/assets/partials/_footer.scss
+++ b/assets/partials/_footer.scss
@@ -11,8 +11,7 @@
         width: 100%;
         max-width: 1200px;
         margin: auto;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        display: grid;        
         grid-gap: 50px;
         padding: 45px 0px;
         text-align: center;
@@ -36,23 +35,17 @@
                     color: $text-color-inverse;
                 }
             }
-            .parrafoFooter{
-                color: $text-color;
-                margin-bottom: 10px;
-                body.dark & {
-                    color: $text-color-inverse;
-                }
-            }
-            .redes{
+            .redes{                
                 a{
                     display: inline-block;
+                    border-radius: 50%;
                     text-decoration: none;
                     width: 45px;
                     height: 45px;
                     line-height: 45px;
-                    color: rgb(0, 0, 0);
+                    color: rgb(255, 255, 255);
                     margin-right: 10px;
-                    background-color: rgb(219, 160, 32);
+                    background-color: rgb(0, 0, 0);
                     text-align: center;
                     transition: all 300ms ease;
                     &:hover{
