--- a/assets/partials/_index.scss
+++ b/assets/partials/_index.scss
@@ -10,6 +10,17 @@
     }
 }
 
+
+.menu2 {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    align-items: center;
+    li{
+        padding: 5px 5px;
+    }
+}
+
 .productos{
     margin: 0 auto;
     display: flex;
@@ -58,8 +69,7 @@
 
 
 .numerito {
-    background-color: $secondary-color;
-    color: $primary-color;
+    background-color: $secondary-color;    
     padding: .15rem .25rem;
     border-radius: .25rem;
 }
@@ -140,8 +150,7 @@
 .carrito-acciones-comprar {
     border: 0;
     background-color: $switch-primary-color;
-    padding: 1rem;
-    color: $switch-text-color;
+    padding: 1rem;    
     text-transform: uppercase;
     cursor: pointer;
     border-top-right-radius: 1rem;
