--- a/assets/partials/_variables.scss
+++ b/assets/partials/_variables.scss
@@ -1,14 +1,15 @@
 $theme-color: antiquewhite;
 $theme-color2: #303030;
-$primary-color: rgb(28, 58, 156);
+$primary-color: rgb(219, 160, 32);
 $secondary-color: rgb(219, 160, 32);
 $text-color-inverse: rgb(224, 224, 224);
 $text-color: black;
 $navbar-shallow-color: rgb(202, 202, 202);
 $menu-mobile-background-color: #303030;
+$max-carousel-height: 40rem;
 
 $switch-theme-color: #1a1a1a;
-$switch-primary-color: rgb(71, 101, 199);
+$switch-primary-color: rgb(255, 255, 255);
 $switch-text-color-inverse: black;
 $switch-text-color: rgb(230, 230, 230);
 $carrito-eliminar: #961818;
