--- a/assets/styles.css
+++ b/assets/styles.css
@@ -11,6 +11,16 @@ body.dark .tituloGeneral h1 {
   color: rgb(224, 224, 224);
 }
 
+.menu2 {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  align-items: center;
+}
+.menu2 li {
+  padding: 5px 5px;
+}
+
 .productos {
   margin: 0 auto;
   display: flex;
@@ -45,7 +55,7 @@ body.dark .productos .textoProductos {
 }
 
 .btnCompra {
-  background-color: rgb(28, 58, 156);
+  background-color: rgb(219, 160, 32);
   color: rgb(224, 224, 224);
   border: none;
   font-size: 20px;
@@ -59,7 +69,6 @@ body.dark .productos .textoProductos {
 
 .numerito {
   background-color: rgb(219, 160, 32);
-  color: rgb(28, 58, 156);
   padding: 0.15rem 0.25rem;
   border-radius: 0.25rem;
 }
@@ -70,7 +79,7 @@ body.dark .productos .textoProductos {
 
 .carrito-vacio,
 .carrito-comprado {
-  color: rgb(28, 58, 156);
+  color: rgb(219, 160, 32);
 }
 
 .carrito-productos {
@@ -83,7 +92,7 @@ body.dark .productos .textoProductos {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(28, 58, 156);
+  background-color: rgb(219, 160, 32);
   color: antiquewhite;
   padding: 0.5rem;
   padding-right: 1.5rem;
@@ -114,7 +123,7 @@ body.dark .productos .textoProductos {
 
 .carrito-acciones-vaciar {
   border: 0;
-  background-color: rgb(28, 58, 156);
+  background-color: rgb(219, 160, 32);
   padding: 1rem;
   border-radius: 1rem;
   color: antiquewhite;
@@ -128,7 +137,7 @@ body.dark .productos .textoProductos {
 
 .carrito-acciones-total {
   display: flex;
-  background-color: rgb(28, 58, 156);
+  background-color: rgb(219, 160, 32);
   padding: 1rem;
   color: antiquewhite;
   text-transform: uppercase;
@@ -139,9 +148,8 @@ body.dark .productos .textoProductos {
 
 .carrito-acciones-comprar {
   border: 0;
-  background-color: rgb(71, 101, 199);
+  background-color: rgb(255, 255, 255);
   padding: 1rem;
-  color: rgb(230, 230, 230);
   text-transform: uppercase;
   cursor: pointer;
   border-top-right-radius: 1rem;
@@ -254,7 +262,6 @@ body.dark .footerContainer {
   max-width: 1200px;
   margin: auto;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
   grid-gap: 50px;
   padding: 45px 0px;
   text-align: center;
@@ -278,22 +285,16 @@ body.dark .footerContainer {
 body.dark .footerContainer .grupo1 .cajaFooter h5 {
   color: rgb(224, 224, 224);
 }
-.footerContainer .grupo1 .cajaFooter .parrafoFooter {
-  color: black;
-  margin-bottom: 10px;
-}
-body.dark .footerContainer .grupo1 .cajaFooter .parrafoFooter {
-  color: rgb(224, 224, 224);
-}
 .footerContainer .grupo1 .cajaFooter .redes a {
   display: inline-block;
+  border-radius: 50%;
   text-decoration: none;
   width: 45px;
   height: 45px;
   line-height: 45px;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   margin-right: 10px;
-  background-color: rgb(219, 160, 32);
+  background-color: rgb(0, 0, 0);
   text-align: center;
   transition: all 300ms ease;
 }
@@ -332,16 +333,10 @@ body.dark .topheader {
 .logo {
   display: flex;
   align-items: center;
-  font-weight: 18px;
   font-weight: 500;
-  color: rgb(28, 58, 156);
 }
 body.dark .logo {
-  color: rgb(71, 101, 199);
-}
-.logo img, .logo div {
-  padding: 0 10px;
-  width: 90px;
+  color: rgb(255, 255, 255);
 }
 
 .menu {
@@ -366,7 +361,7 @@ body.dark .menu li a {
   color: rgb(224, 224, 224);
 }
 .menu lihover {
-  color: rgb(28, 58, 156);
+  color: rgb(219, 160, 32);
 }
 
 .open-menu, .close-menu, .close-menu-social {
@@ -391,5 +386,9 @@ body.dark .menu li a {
 }
 
 .menu a:hover {
-  color: rgb(28, 58, 156);
+  color: rgb(219, 160, 32);
+}
+
+.carousel-inner {
+  max-height: 40rem !important;
 }/*# sourceMappingURL=styles.css.map */
