--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -5,5 +5,7 @@
 @import "./partials/footer";
 @import "./partials/navbar";
 @import "./partials/carousel";
+@import "./partials/mediasQueries";
+
 
 
