arreglos medias queries y css

--- a/assets/partials/_index.scss
+++ b/assets/partials/_index.scss
@@ -16,6 +16,7 @@
     flex-wrap: wrap;
     list-style: none;
     align-items: center;
+    justify-content: center;
     li{
         padding: 5px 5px;
     }
