--- a/assets/partials/_mediasQueries.scss
+++ b/assets/partials/_mediasQueries.scss
@@ -92,6 +92,30 @@ h1{
         flex-wrap: wrap;
     }
 }
+/* ====== carrito ====== */
+
+.carrito-producto{
+    padding: 5px;
+    .carrito-producto-imagen{
+        padding: 3px;
+    }
+    .carrito-producto-titulo{
+        padding: 5px;
+    }
+    .carrito-producto-cantidad{
+        padding: 5px;
+    }
+    .carrito-producto-precio{
+        padding: 10px;
+    }
+    .carrito-producto-subtotal{
+        padding: 10px;
+    }
+    .carrito-acciones-derecha{
+        margin-left: 15px;
+    }
+}
+
 
 
 /* ============== footer ============== */
@@ -205,6 +229,31 @@ h1{
     .textoProductos{
         padding: 5px;
         flex-wrap: wrap;
+    }
+}
+
+
+/* ====== carrito ====== */
+
+.carrito-producto{
+    padding: 5px;
+    .carrito-producto-imagen{
+        padding: 3px;
+    }
+    .carrito-producto-titulo{
+        padding: 5px;
+    }
+    .carrito-producto-cantidad{
+        padding: 5px;
+    }
+    .carrito-producto-precio{
+        padding: 10px;
+    }
+    .carrito-producto-subtotal{
+        padding: 10px;
+    }
+    .carrito-acciones-derecha{
+        margin-left: 15px;
     }
 }
 
