--- a/assets/styles.css
+++ b/assets/styles.css
@@ -475,6 +475,28 @@ body.dark .menu li a {
     padding: 5px;
     flex-wrap: wrap;
   }
+  /* ====== carrito ====== */
+  .carrito-producto {
+    padding: 5px;
+  }
+  .carrito-producto .carrito-producto-imagen {
+    padding: 3px;
+  }
+  .carrito-producto .carrito-producto-titulo {
+    padding: 5px;
+  }
+  .carrito-producto .carrito-producto-cantidad {
+    padding: 5px;
+  }
+  .carrito-producto .carrito-producto-precio {
+    padding: 10px;
+  }
+  .carrito-producto .carrito-producto-subtotal {
+    padding: 10px;
+  }
+  .carrito-producto .carrito-acciones-derecha {
+    margin-left: 15px;
+  }
   /* ============== footer ============== */
   .footerContainer .grupo1 {
     width: 90%;
@@ -570,6 +592,28 @@ body.dark .menu li a {
   .productos .textoProductos {
     padding: 5px;
     flex-wrap: wrap;
+  }
+  /* ====== carrito ====== */
+  .carrito-producto {
+    padding: 5px;
+  }
+  .carrito-producto .carrito-producto-imagen {
+    padding: 3px;
+  }
+  .carrito-producto .carrito-producto-titulo {
+    padding: 5px;
+  }
+  .carrito-producto .carrito-producto-cantidad {
+    padding: 5px;
+  }
+  .carrito-producto .carrito-producto-precio {
+    padding: 10px;
+  }
+  .carrito-producto .carrito-producto-subtotal {
+    padding: 10px;
+  }
+  .carrito-producto .carrito-acciones-derecha {
+    margin-left: 15px;
   }
   /* ============== footer ============== */
   .footerContainer .grupo1 {
