--- a/assets/styles.css
+++ b/assets/styles.css
@@ -494,7 +494,7 @@ body.dark .menu li a {
   .carrito-producto .carrito-producto-subtotal {
     padding: 10px;
   }
-  .carrito-producto .carrito-acciones-derecha {
+  .carrito-acciones-derecha {
     margin-left: 15px;
   }
   /* ============== footer ============== */
@@ -512,8 +512,8 @@ body.dark .menu li a {
     text-align: center;
   }
 }
-/* 480px */
-@media (max-width: 480px) {
+/* 430px */
+@media (max-width: 430px) {
   /* ============== Menu ============== */
   .menu {
     flex-direction: column;
@@ -612,7 +612,7 @@ body.dark .menu li a {
   .carrito-producto .carrito-producto-subtotal {
     padding: 10px;
   }
-  .carrito-producto .carrito-acciones-derecha {
+  .carrito-acciones-derecha {
     margin-left: 15px;
   }
   /* ============== footer ============== */
